section overflow issue fixed; circles/rects position tuned

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -6,14 +6,17 @@ $black: #1b1b1b;
 $gray: #2b2b2b;
 $orange:  #ff5722;
 
-// html {
-//     scroll-behavior: smooth;
-// }
+html {
+    overflow-x: hidden;
+    overflow-y: scroll;
+}
 
 body {
     background-color: $gray;
-    overflow-x: hidden;
-    overflow-y: scroll;
+    overflow: hidden;
+    // overflow-x: hidden;
+    // overflow-y: scroll;
+    
 }
 
 header {
@@ -92,7 +95,6 @@ header {
     section.home {
 
 
-
         .layers {
             transform-style: preserve-3d;
             transform: perspective(1000px);
@@ -116,7 +118,7 @@ header {
                 position: absolute;
                 top: 15%;
                 left: 0;
-                width: 50%;
+                width: 62%;
                 height: 70%;
                 display: flex;
                 flex-direction: column;
@@ -126,7 +128,7 @@ header {
                 div {
                     overflow: hidden;
                     p {
-                        visibility: hidden;
+                        // visibility: hidden;
                     }
                     .name1 {
                         font-size: 7rem;
@@ -142,50 +144,44 @@ header {
 
             .layerCircle {
                 position: absolute;
-                top: 12%;
+                top: 0;
                 left: 0;
-                background: #f7f7f7;
                 border-radius: 50%;
-                box-shadow: -2px -2px 40px $black;
                 display: grid;
                 place-items: center;
-                visibility: hidden;
+                // visibility: hidden;
+                // outline: 1px solid $white;
+                box-shadow: -2px -2px 40px $black;
             }
             .circle1 {
-                width: 35vh;
-                height: 35vh;
-                transform: translate(200%, -15%);
+                width: 25vh;
+                height: 25vh;
+                z-index: -1;
+                // overflow: hidden;
+                transform: translate(290%, 35%);
                 background-color: #ff5722;
             }
             .circle2 {
-                width: 55vh;
-                height: 55vh;
-                transform: translate(180%, -30%);
+                width: 45vh;
+                height: 45vh;
+                z-index: -1;
+                transform: translate(200%, 10%);
                 background-color: #CA4C24;
             }
             .circle3 {
-                width: 75vh;
-                height: 75vh;
-                transform: translate(60%, 5%);
+                width: 65vh;
+                height: 65vh;
+                z-index: -1;
+                transform: translate(80%, 10%);
                 background-color: #954127;
             }
             .circle4 {
-                height: 95vh;
-                width: 95vh;
+                height: 85vh;
+                width: 85vh;
+                z-index: -1;
                 border-radius: 50%;
-                // overflow: hidden;
-                transform: translate(70%, 6%);
+                transform: translate(80%, 30%);
                 background-color: #603629;
-                // z-index: -1;
-                // &:before {
-                //     content: '123';
-                //     position: absolute;
-                //     height: 100%;
-                //     width: 100%;
-                //     // transform: translate(40%, 40%);
-                //     border-radius: 50%;
-                //     background-color: red;
-                // }
             }
         }
     }
@@ -200,7 +196,7 @@ header {
             transform-style: preserve-3d;
             transform: perspective(1000px);
             .rect {
-                visibility: hidden;
+                // visibility: hidden;
                 background: #f7f7f7;
                 position: relative;
                 box-shadow: -2px -2px 40px $black;
@@ -222,7 +218,7 @@ header {
                     overflow: hidden;
                     margin: 0.5rem 0;
                     p {
-                        visibility: hidden;
+                        // visibility: hidden;
                         font-size: 1.25rem;
                     }
                 }
@@ -246,9 +242,9 @@ header {
             .rect3 {
                 position: absolute;
                 top: 0;
-                width: 85vh;
+                width: 105vh;
                 height: 60vh;
-                transform: translate(-20%, 30%) rotateZ(-10deg);;
+                transform: translate(-20%, 30%) rotateZ(-10deg);
                 background-color: #954127;
             }
             .rect4 {
@@ -256,7 +252,7 @@ header {
                 top: 0px;
                 width: 120vh;
                 height: 70vh;
-                transform: translate(-20%, 10%) rotateZ(75deg);;
+                transform: translate(-20%, 10%) rotateZ(75deg);
                 background-color: #603629;
             }
         }
